update signalR for use case Approve article

--- a/NewsPortalRazor/Pages/Editor/Articles/Index.cshtml
+++ b/NewsPortalRazor/Pages/Editor/Articles/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 @using X.PagedList.Mvc.Core
-@model NewsPortalRazor.Pages.Admin.Articles.IndexModel
+@model NewsPortalRazor.Pages.Editor.Articles.IndexModel
 
 @{
     ViewData["Title"] = "My Articles";
